# tower-http-client

./: .gitignore  CHANGELOG.md  Cargo.toml  flake.nix  result  treefmt.nix
.github/workflows/: ci.yml
tower-http-client/: Cargo.toml  README.md
tower-http-client/benches/: client.rs
tower-http-client/examples/: boxed_client.rs  rate_limiter.rs  retry.rs  rewrite_uri.rs  send_form.rs  send_json.rs
tower-http-client/src/: adapters.rs  lib.rs  rewrite_uri.rs
tower-http-client/src/client/: body_reader.rs  client_request.rs  into_uri.rs  mod.rs  request_builder.rs  request_ext.rs  response_ext.rs  service_ext.rs
tower-http-client/src/util/: mod.rs
tower-http-client/tests/: mocks.rs  service_ext.rs
tower-reqwest/: Cargo.toml  README.md
tower-reqwest/examples/: add_authorization.rs  set_header.rs
tower-reqwest/src/: auth.rs  lib.rs  set_header.rs
tower-reqwest/src/adapters/: reqwest.rs
