[workspace]
resolver = "2"
members = ["tower-http-client", "tower-reqwest"]

[workspace.package]
edition = "2021"
rust-version = "1.78"
version = "0.5.0"
categories = [
  "asynchronous",
  "network-programming",
  "web-programming::http-client",
]
keywords = ["io", "async", "futures", "service", "http"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/alekseysidorov/tower-http-client"

[workspace.dependencies]
tower-reqwest = { version = "0.5.0", path = "tower-reqwest" }

anyhow = "1.0"
bytes = "1.9"
futures-util = "0.3"
http = "1.2.0"
http-body = "1.0"
http-body-util = "0.1"
include-utils = "0.2"
pin-project = "1.1"
pretty_assertions = "1.4"
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
retry-policies = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false, features = ["util"] }
tower-layer = "0.3"
tower-service = "0.3"
url = "2.5"
wiremock = "0.6"
base64 = "0.22"

[workspace.lints.rust]
missing_debug_implementations = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "warn"
missing_errors_doc = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
