[workspace]
resolver = "3"
members = ["tower-http-client", "tower-reqwest"]

[workspace.package]
edition = "2024"
rust-version = "1.89"
version = "0.6.0"
categories = [
  "asynchronous",
  "network-programming",
  "web-programming::http-client",
]
keywords = ["io", "async", "futures", "service", "http"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/alekseysidorov/tower-http-client"

[workspace.dependencies]
tower-reqwest = { version = "0.6", path = "tower-reqwest" }

async-trait = "0.1"
anyhow = "1.0"
bytes = "1.10"
futures-util = "0.3"
http = "1.3"
http-body = "1.0"
http-body-util = "0.1"
http-body-reader = { version = "0.1", default-features = false }
headers = "0.4.0"
include-utils = "0.2"
pin-project = "1.1"
pretty_assertions = "1.4"
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
reqwest-middleware = "0.4.2"
retry-policies = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false, features = ["util"] }
tower-layer = "0.3"
tower-service = "0.3"
url = "2.5"
wiremock = "0.6"
base64 = "0.22"
criterion = "0.8"
axum = "0.8.4"

[workspace.lints.rust]
missing_debug_implementations = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "warn"
missing_errors_doc = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
