[workspace]
resolver = "3"
members = ["tower-http-client", "tower-reqwest"]

[workspace.package]
version = "0.6.0"
edition = "2024"
rust-version = "1.89"
repository = "https://github.com/alekseysidorov/tower-http-client"
license = "MIT OR Apache-2.0"
keywords = ["async", "futures", "http", "io", "service"]
categories = [
  "asynchronous",
  "network-programming",
  "web-programming::http-client",
]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8.4"
base64 = "0.22"
bytes = "1.11.1"
criterion = "0.8"
futures-util = "0.3"
headers = "0.4.0"
http = "1.3"
http-body = "1.0"
http-body-reader = { version = "0.1", default-features = false }
http-body-util = "0.1"
include-utils = "0.2"
pin-project = "1.1"
pretty_assertions = "1.4"
reqwest = { version = "0.13.2", default-features = false }
reqwest-middleware = "0.5.1"
retry-policies = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
thiserror = "2.0"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false, features = ["util"] }
tower-layer = "0.3"
tower-reqwest = { path = "tower-reqwest", version = "0.6.0" }
tower-service = "0.3"
url = "2.5"
wiremock = "0.6"

[workspace.lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "warn"
module_name_repetitions = "allow"
pedantic = { level = "warn", priority = -1 }

[workspace.lints.rust]
missing_debug_implementations = "warn"
unsafe_code = "forbid"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.metadata.crane]
name = "tower-http-client"
