[package]
name = "tower-http-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Extra Tower middlewares and utilities for HTTP clients."
documentation = "https://docs.rs/crate/tower-http-client"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bytes = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-reader = { workspace = true }
http-body-util = { workspace = true }
include-utils = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tower = { workspace = true, default-features = false, features = ["util"] }
tower-layer = { workspace = true }
tower-service = { workspace = true }
url = { workspace = true }

headers = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_urlencoded = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }
reqwest = { workspace = true, features = ["json"] }
reqwest-middleware = { workspace = true }
retry-policies = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true, features = ["buffer", "limit", "retry", "util"] }
tower-http = { workspace = true, features = [
  "map-request-body",
  "map-response-body",
  "set-header",
  "util",
] }
tower-reqwest = { workspace = true }
wiremock = { workspace = true }

[features]
default = ["form", "json", "typed-header"]
form = ["dep:serde_urlencoded", "http-body-reader/form"]
json = ["dep:serde_json", "http-body-reader/json"]
typed-header = ["dep:headers"]

[[example]]
name = "rate_limiter"

[[example]]
name = "retry"

[[example]]
name = "send_json"
required-features = ["json"]

[[example]]
name = "send_form"
required-features = ["form"]

[[example]]
name = "boxed_client"
required-features = ["json"]

[[test]]
name = "service_ext"

[[bench]]
harness = false
name = "client"
required-features = ["json"]

[lints]
workspace = true
