[package]
name = "tower-reqwest"
description = "Adapter between reqwest and tower-http crates."
documentation = "https://docs.rs/crate/tower-reqwest"
readme = "README.md"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "set_header"
required-features = ["set-header"]

[[example]]
name = "add_authorization"
required-features = ["auth"]

[dependencies]
base64 = { workspace = true, optional = true }
bytes = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
include-utils = { workspace = true }
pin-project = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
pretty_assertions = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["request-id", "set-header", "util"] }
wiremock = { workspace = true }

[features]
default = []
auth = ["dep:base64"]
set-header = []

[lints]
workspace = true
